--- a/pomodoro-timer/index.html
+++ b/pomodoro-timer/index.html
@@ -76,6 +76,12 @@
             0%, 100% { opacity: 1; }
             50% { opacity: 0.5; }
         }
+
+        .session-count {
+            font-size: 1.2rem;
+            margin-top: 1rem;
+            color: var(--text-color);
+        }
     </style>
 </head>
 <body>
@@ -86,6 +92,8 @@
         </div>
 
         <div id="timer-display" class="timer-display">25:00</div>
+
+        <div id="session-count" class="session-count">Pomodoros completed: 0</div>
 
         <div class="control-buttons">
             <button id="btn-start-stop">Start</button>
@@ -102,6 +110,7 @@
             // Runtime state
             mode: 'pomodoro',       // 'pomodoro' | 'shortBreak'
             remainingSeconds: 25 * 60,
+            sessions: 0,            // Completed Pomodoro count
             // Phase 2 timer control state
             isRunning: false,
             intervalId: null,
@@ -121,6 +130,12 @@
         // Update display function - syncs DOM with state
         function updateDisplay() {
             displayElement.textContent = formatTime(timer.remainingSeconds);
+        }
+
+        // Update session counter display
+        function updateSessionDisplay() {
+            document.getElementById('session-count').textContent =
+                `Pomodoros completed: ${timer.sessions}`;
         }
 
         // Timer control functions
@@ -171,12 +186,22 @@
             updateDisplay();
         }
 
-        // Handle completion - visual indicator
+        // Handle completion - increment sessions and auto-switch mode
         function handleComplete() {
+            // Only count completed Pomodoros, NOT breaks
+            if (timer.mode === 'pomodoro') {
+                timer.sessions++;
+                updateSessionDisplay();
+            }
+
             stopTimer();
             timer.remainingSeconds = 0;
             updateDisplay();
             displayElement.classList.add('complete');
+
+            // Auto-switch mode after completion
+            const nextMode = timer.mode === 'pomodoro' ? 'shortBreak' : 'pomodoro';
+            switchMode(nextMode);
         }
 
         // Switch mode function - handles running state preservation
@@ -244,6 +269,7 @@
 
         // Sync display with state on page load
         updateDisplay();
+        updateSessionDisplay();
     </script>
 </body>
 </html>
